[package]
name = "libzcashlc"
version = "0.1.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Francisco Gindre <francisco@z.cash>",
]
license = "MIT"
edition = "2018"
build = "build.rs"

[dependencies]
failure = "0.1"
ffi_helpers = "0.2"
hex = "0.4"
memuse = "0.2.1"
schemer = "0.2.1"
secp256k1 = "0.21"
secrecy = "0.8"

zcash_address = { version = "0.2" }
zcash_client_backend = { version = "0.6.1", features = ["transparent-inputs", "unstable"] }
zcash_client_sqlite = { version = "0.4.2", features = ["transparent-inputs", "unstable"] }
zcash_primitives = "0.9.1"
zcash_proofs = "0.9"

# Revision corresponds to zcash_primitives 0.6.0 plus the NU5 mainnet activation height.
# We also need zcash_client_backend and zcash_client_sqlite, which haven't been published
# with NU5 updates yet.
[patch.crates-io]
zcash_address = { git = 'https://github.com/Meshbits/librustzcash.git', rev='16a2bd578517304d23ca18fb5607dc76715131bd' }
zcash_client_backend = { git = 'https://github.com/Meshbits/librustzcash.git', rev='16a2bd578517304d23ca18fb5607dc76715131bd' }
zcash_client_sqlite = { git = 'https://github.com/Meshbits/librustzcash.git', rev='16a2bd578517304d23ca18fb5607dc76715131bd' }
zcash_primitives = { git = 'https://github.com/Meshbits/librustzcash.git', rev='16a2bd578517304d23ca18fb5607dc76715131bd' }
zcash_proofs = { git = 'https://github.com/Meshbits/librustzcash.git', rev='16a2bd578517304d23ca18fb5607dc76715131bd' }


[build-dependencies]
cbindgen = "0.14"

[lib]
name = "zcashlc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true

[features]
mainnet = ["zcash_client_sqlite/mainnet"]
testnet = []
